syntax = "proto3";
option java_multiple_files = true;
package com.joao.ingredient;

message IngredientRequest {
  string privateKey = 1;
}

message IngredientResponse {
  int32 code = 1;
  string name = 2;
  string category = 3;
}

service IngredientService {
  rpc getIngredient(IngredientRequest) returns (IngredientResponse);
}
